--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-api3-project-handell",
+  "name": "node-api3-project",
   "version": "1.0.0",
   "description": "Node API 3 Project",
   "main": "index.js",
